--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,11 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-28Cn65YdM
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+queue.blacklist=blacklist-token-queue
 
 
 #link to sign in : http://localhost:8080/oauth2/authorization/google
