--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=auth_service
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_service
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_service?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=12345678
 
