--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/auth_service?createDatabaseIfN
 spring.datasource.username=root
 spring.datasource.password=12345678
 
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=100MB
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
